--- a/index.html
+++ b/index.html
@@ -64,7 +64,83 @@
 
     <!-- Hero Section -->
 
-    <section></section>
+    <section class="p-5">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+        <div
+          class="latest--sec--left flex flex-col justify-center items-center rounded-md text-center"
+        >
+          <h1 class="text-2xl font-extrabold">
+            Unleashing creativity, one story at a time.
+          </h1>
+          <p class="text-sm max-w-sm">
+            Explore thought-provoking insights, creative journeys, and inspiring
+            perspectives to fuel your passions.
+          </p>
+        </div>
+        <div class="latest--sec--right grid grid-cols-2 gap-3">
+          <!-- Latest Card Component -->
+          <div class="latest--blog--posts rounded-lg">
+            <img
+              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
+              alt=""
+              class="rounded-t-lg h-50 w-50"
+            />
+            <div class="p-3">
+              <span class="text-xs">Branding</span>
+              <h3 class="font-semibold text-sm">
+                A Boy Who Had: This is a story of a little boy
+              </h3>
+            </div>
+          </div>
+          <!-- Latest Card Component Ends-->
+          <!-- Latest Card Component -->
+          <div class="latest--blog--posts rounded-lg">
+            <img
+              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
+              alt=""
+              class="rounded-t-lg h-50 w-50"
+            />
+            <div class="p-3">
+              <span class="text-xs">Branding</span>
+              <h3 class="font-semibold text-sm">
+                A Boy Who Had: This is a story of a little boy
+              </h3>
+            </div>
+          </div>
+          <!-- Latest Card Component Ends-->
+          <!-- Latest Card Component -->
+          <div class="latest--blog--posts rounded-lg">
+            <img
+              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
+              alt=""
+              class="rounded-t-lg h-50 w-50"
+            />
+            <div class="p-3">
+              <span class="text-xs">Branding</span>
+              <h3 class="font-semibold text-sm">
+                A Boy Who Had: This is a story of a little boy
+              </h3>
+            </div>
+          </div>
+          <!-- Latest Card Component Ends-->
+          <!-- Latest Card Component -->
+          <div class="latest--blog--posts rounded-lg">
+            <img
+              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
+              alt=""
+              class="rounded-t-lg h-50 w-50"
+            />
+            <div class="p-3">
+              <span class="text-xs">Branding</span>
+              <h3 class="font-semibold text-sm">
+                A Boy Who Had: This is a story of a little boy
+              </h3>
+            </div>
+          </div>
+          <!-- Latest Card Component Ends-->
+        </div>
+      </div>
+    </section>
 
     <!-- Hero Section Ends-->
 
@@ -72,17 +148,6 @@
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
     <!-- Tailwind Script -->
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: "#da373d",
-            },
-          },
-        },
-      };
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
