Hero Section update

--- a/index.html
+++ b/index.html
@@ -7,142 +7,150 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navigation Section -->
+    <!-- Top Section -->
+    <section class="top--section">
+      <!-- Navigation Section -->
 
-    <header>
-      <nav>
-        <!-- Top Navigation Ends here -->
-        <div class="flex justify-between p-5">
-          <h1 class="font-extrabold text-2xl">Vibe & Vision</h1>
-          <ul class="hidden sm:flex gap-5">
-            <li>
-              <a href="#">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide lucide-search"
-                >
-                  <circle cx="11" cy="11" r="8" />
-                  <path d="m21 21-4.3-4.3" />
-                </svg>
-              </a>
-            </li>
+      <header>
+        <nav>
+          <!-- Top Navigation Ends here -->
+          <div class="flex justify-between items-center p-5">
+            <h1 class="font-extrabold text-2xl">Vibe & Vision</h1>
+            <ul class="hidden sm:flex gap-5">
+              <li>
+                <a href="#">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-search"
+                  >
+                    <circle cx="11" cy="11" r="8" />
+                    <path d="m21 21-4.3-4.3" />
+                  </svg>
+                </a>
+              </li>
 
-            <li><a href="#">Tags</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Books</a></li>
-            <li><button>Subscribe</button></li>
+              <li><a href="#">Tags</a></li>
+              <li><a href="#">Archives</a></li>
+              <li><a href="#">Books</a></li>
+              <li><button>Subscribe</button></li>
+            </ul>
+          </div>
+
+          <!-- Top Navigation Ends here -->
+
+          <!-- Bottom Navigation -->
+
+          <ul class="hidden lg:flex justify-center gap-5 my-5">
+            <li><a href="#">ALL TOPIC</a></li>
+            <li><a href="#">ANIMATIONS</a></li>
+            <li><a href="#">CASE STUDY</a></li>
+            <li><a href="#">GOSSIPS</a></li>
+            <li><a href="#">PROCESS AND TOOLS</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">LATEST</a></li>
           </ul>
+
+          <!-- Bottom Navigation Ends here -->
+        </nav>
+      </header>
+
+      <!-- Navigation Section Ends here -->
+
+      <!-- Hero Section -->
+
+      <section class="p-5">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+          <div
+            class="latest--sec--left flex flex-col justify-center items-center rounded-md text-center gap-5 px-5"
+          >
+            <h1 class="text-2xl font-extrabold">
+              Unleashing creativity, one story at a time.
+            </h1>
+            <p class="text-sm max-w-sm">
+              Explore thought-provoking insights, creative journeys, and
+              inspiring perspectives to fuel your passions.
+            </p>
+          </div>
+          <div class="latest--sec--right grid grid-cols-2 gap-3">
+            <!-- Latest Card Component -->
+            <div class="latest--blog--posts rounded-lg">
+              <img
+                src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
+                alt=""
+                class="rounded-t-lg h-50 w-50"
+              />
+              <div class="p-3">
+                <span class="text-xs">Branding</span>
+                <h3 class="font-semibold text-sm">
+                  A Boy Who Had: This is a story of a little boy
+                </h3>
+              </div>
+            </div>
+            <!-- Latest Card Component Ends-->
+            <!-- Latest Card Component -->
+            <div class="latest--blog--posts rounded-lg">
+              <img
+                src="https://images.unsplash.com/photo-1505682614136-0a12f9f7beea?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+                class="rounded-t-lg h-50 w-50"
+              />
+              <div class="p-3">
+                <span class="text-xs">Branding</span>
+                <h3 class="font-semibold text-sm">
+                  A Boy Who Had: This is a story of a little boy
+                </h3>
+              </div>
+            </div>
+            <!-- Latest Card Component Ends-->
+            <!-- Latest Card Component -->
+            <div class="latest--blog--posts rounded-lg">
+              <img
+                src="https://images.unsplash.com/photo-1529665730773-4f3fda31a5f9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+                class="rounded-t-lg h-50 w-50"
+              />
+              <div class="p-3">
+                <span class="text-xs">Branding</span>
+                <h3 class="font-semibold text-sm">
+                  A Boy Who Had: This is a story of a little boy
+                </h3>
+              </div>
+            </div>
+            <!-- Latest Card Component Ends-->
+            <!-- Latest Card Component -->
+            <div class="latest--blog--posts rounded-lg">
+              <img
+                src="https://images.unsplash.com/photo-1444720895098-cbd6b640c909?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+                class="rounded-t-lg h-50 w-50"
+              />
+              <div class="p-3">
+                <span class="text-xs">Branding</span>
+                <h3 class="font-semibold text-sm">
+                  A Boy Who Had: This is a story of a little boy
+                </h3>
+              </div>
+            </div>
+            <!-- Latest Card Component Ends-->
+          </div>
         </div>
+      </section>
 
-        <!-- Top Navigation Ends here -->
-
-        <!-- Bottom Navigation -->
-
-        <ul class="hidden lg:flex justify-center gap-5 my-5">
-          <li><a href="#">ALL TOPIC</a></li>
-          <li><a href="#">ANIMATIONS</a></li>
-          <li><a href="#">CASE STUDY</a></li>
-          <li><a href="#">GOSSIPS</a></li>
-          <li><a href="#">PROCESS AND TOOLS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">LATEST</a></li>
-        </ul>
-
-        <!-- Bottom Navigation Ends here -->
-      </nav>
-    </header>
-
-    <!-- Navigation Section Ends here -->
-
-    <!-- Hero Section -->
-
-    <section class="p-5">
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-        <div
-          class="latest--sec--left flex flex-col justify-center items-center rounded-md text-center"
-        >
-          <h1 class="text-2xl font-extrabold">
-            Unleashing creativity, one story at a time.
-          </h1>
-          <p class="text-sm max-w-sm">
-            Explore thought-provoking insights, creative journeys, and inspiring
-            perspectives to fuel your passions.
-          </p>
-        </div>
-        <div class="latest--sec--right grid grid-cols-2 gap-3">
-          <!-- Latest Card Component -->
-          <div class="latest--blog--posts rounded-lg">
-            <img
-              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
-              alt=""
-              class="rounded-t-lg h-50 w-50"
-            />
-            <div class="p-3">
-              <span class="text-xs">Branding</span>
-              <h3 class="font-semibold text-sm">
-                A Boy Who Had: This is a story of a little boy
-              </h3>
-            </div>
-          </div>
-          <!-- Latest Card Component Ends-->
-          <!-- Latest Card Component -->
-          <div class="latest--blog--posts rounded-lg">
-            <img
-              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
-              alt=""
-              class="rounded-t-lg h-50 w-50"
-            />
-            <div class="p-3">
-              <span class="text-xs">Branding</span>
-              <h3 class="font-semibold text-sm">
-                A Boy Who Had: This is a story of a little boy
-              </h3>
-            </div>
-          </div>
-          <!-- Latest Card Component Ends-->
-          <!-- Latest Card Component -->
-          <div class="latest--blog--posts rounded-lg">
-            <img
-              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
-              alt=""
-              class="rounded-t-lg h-50 w-50"
-            />
-            <div class="p-3">
-              <span class="text-xs">Branding</span>
-              <h3 class="font-semibold text-sm">
-                A Boy Who Had: This is a story of a little boy
-              </h3>
-            </div>
-          </div>
-          <!-- Latest Card Component Ends-->
-          <!-- Latest Card Component -->
-          <div class="latest--blog--posts rounded-lg">
-            <img
-              src="https://images.unsplash.com/photo-1521566652839-697aa473761a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlcnNvbnxlbnwwfDB8MHx8fDA%3D"
-              alt=""
-              class="rounded-t-lg h-50 w-50"
-            />
-            <div class="p-3">
-              <span class="text-xs">Branding</span>
-              <h3 class="font-semibold text-sm">
-                A Boy Who Had: This is a story of a little boy
-              </h3>
-            </div>
-          </div>
-          <!-- Latest Card Component Ends-->
-        </div>
-      </div>
+      <!-- Hero Section Ends-->
     </section>
+    <!-- Top Section Ends-->
 
-    <!-- Hero Section Ends-->
+    <!-- Article Section -->
+
+    <article class="article--section"><h1>hello</h1></article>
 
     <!-- Lucide Script -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
