--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               inspiring perspectives to fuel your passions.
             </p>
           </div>
-          <div class="latest--sec--right grid grid-cols-2 gap-3">
+          <div class="latest--sec--right grid md:grid-cols-2 gap-3">
             <!-- Latest Card Component -->
             <div class="latest--blog--posts rounded-lg">
               <img
