--- a/index.html
+++ b/index.html
@@ -182,15 +182,21 @@
 
       <!-- Right Article -->
       <div
-        class="right--article rounded-lg flex justify-start items-center h-96 md:h-auto p-5"
+        class="right--article rounded-lg flex justify-start md:justify-center items-center h-96 md:h-auto p-5"
       >
         <div class="right--articl--container rounded-lg">
-          <h3 class="text-2xl font-bold text-center py-3 px-5 rounded-lg">
-            TOP INSIGHTS
+          <h3 class="text-2xl font-bold text-center py-3 px-5 rounded-t-lg">
+            Categories
           </h3>
           <ul>
             <li class="font-medium text-xs py-3 px-5">
-              How Design Changes You.
+              <a href="#">Creative Thinking </a>
+            </li>
+            <li class="font-medium text-xs py-3 px-5">
+              <a href="#">Productivity Hacks </a>
+            </li>
+            <li class="font-medium text-xs py-3 px-5">
+              <a href="#">Mindfulness & Well-being </a>
             </li>
           </ul>
         </div>
@@ -270,7 +276,6 @@
 
     <!-- Lucide Script -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <script src="script.js"></script>
     <!-- Tailwind Script -->
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
